# hacker-chess

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  check.c  check.h  macro.h  main.c  move.c  move.h  types.c  types.h  util.c  util.h  validate.c  validate.h
src/pieces/: bishop.c  bishop.h  king.c  king.h  knight.c  knight.h  pawn.c  pawn.h  queen.c  queen.h  rook.c  rook.h  shared.c  shared.h
